# ascii_art_generator

./: .gitignore  README.md  ascii_art_tutorial.ipynb  environment.yml  pyproject.toml  setup.py  test.ipynb
ascii_art_generator/: __init__.py  ascii_art_generator.py  ascii_art_generator_image.py  ascii_art_generator_video.py  utils_ascii.py  utils_compute_stats.py
ascii_art_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ascii_art_generator/: __init__.py  ascii_art_generator_image.py  ascii_art_generator_video.py  utils_ascii.py  utils_compression.py  utils_compute_stats.py
test/: test_utils_ascii.py
